--- a/package.json
+++ b/package.json
@@ -1,18 +1,22 @@
 {
-   "name": "graphql-ts-server-boilerplate",
-   "version": "0.0.1",
-   "description": "Awesome project developed with TypeORM.",
-   "devDependencies": {
-      "ts-node": "8.10.2",
-      "@types/node": "^14.0.27",
-      "typescript": "3.9.7"
-   },
-   "dependencies": {
-      "typeorm": "0.2.25",
-      "reflect-metadata": "^0.1.13",
-      "pg": "^8.3.0"
-   },
-   "scripts": {
-      "start": "ts-node src/index.ts"
-   }
+  "name": "graphql-ts-server-boilerplate",
+  "version": "0.0.1",
+  "description": "Awesome project developed with TypeORM.",
+  "devDependencies": {
+    "@types/node": "^14.0.27",
+    "nodemon": "^2.0.4",
+    "ts-node": "8.10.2",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
+    "typescript": "3.9.7"
+  },
+  "dependencies": {
+    "graphql-yoga": "^1.18.3",
+    "pg": "^8.3.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "0.2.25"
+  },
+  "scripts": {
+    "start": "nodemon --exec ts-node src/index.ts"
+  }
 }
