--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/node": "^14.0.27",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.4",
     "ts-node": "8.10.2",
     "tslint": "^6.1.3",
@@ -11,10 +12,12 @@
     "typescript": "3.9.7"
   },
   "dependencies": {
+    "graphql-import": "^1.0.2",
     "graphql-yoga": "^1.18.3",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.25"
+    "typeorm": "0.2.25",
+    "uuid": "^8.3.0"
   },
   "scripts": {
     "start": "nodemon --exec ts-node src/index.ts"
