--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@types/node": "^14.0.27",
     "@types/uuid": "^8.3.0",
+    "gql2ts": "^1.10.1",
     "nodemon": "^2.0.4",
     "ts-node": "8.10.2",
     "tslint": "^6.1.3",
@@ -20,6 +21,7 @@
     "uuid": "^8.3.0"
   },
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts",
+    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
   }
 }
