--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
     "@types/uuid": "^8.3.0",
     "gql2ts": "^1.10.1",
+    "jest": "^26.4.0",
     "nodemon": "^2.0.4",
+    "ts-jest": "^26.2.0",
     "ts-node": "8.10.2",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
@@ -16,6 +19,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "graphql-import": "^1.0.2",
+    "graphql-request": "^3.0.0",
     "graphql-yoga": "^1.18.3",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
@@ -24,6 +28,21 @@
   },
   "scripts": {
     "start": "nodemon --exec ts-node src/index.ts",
+    "test": "jest",
     "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.tsk?$": "ts-jest"
+    },
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|sec))\\.(jsx?|tsx?)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
