--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "graphql-yoga": "^1.18.3",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.25",
-    "uuid": "^8.3.0"
+    "typeorm": "0.2.25"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
