--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
     "@types/uuid": "^8.3.0",
+    "@types/yup": "^0.29.5",
     "gql2ts": "^1.10.1",
     "jest": "^26.4.0",
     "nodemon": "^2.0.4",
@@ -25,7 +26,8 @@
     "graphql-yoga": "^1.18.3",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
-    "typeorm": "0.2.25"
+    "typeorm": "0.2.25",
+    "yup": "^0.29.3"
   },
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
