--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/ioredis": "^4.17.3",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
     "@types/uuid": "^8.3.0",
@@ -24,9 +25,11 @@
     "graphql-request": "^3.0.0",
     "graphql-tools": "^6.0.18",
     "graphql-yoga": "^1.18.3",
+    "ioredis": "^4.17.3",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.25",
+    "uuid": "^8.3.0",
     "yup": "^0.29.3"
   },
   "scripts": {
