--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
   },
   "jest": {
+    "globalSetup": "",
     "transform": {
       "^.+\\.tsk?$": "ts-jest"
     },
