--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/ioredis": "^4.17.3",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
+    "@types/node-fetch": "^2.5.7",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.5",
     "gql2ts": "^1.10.1",
@@ -26,6 +27,7 @@
     "graphql-tools": "^6.0.18",
     "graphql-yoga": "^1.18.3",
     "ioredis": "^4.17.3",
+    "node-fetch": "^2.6.0",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "0.2.25",
