--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.7",
     "@types/ioredis": "^4.17.3",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
@@ -20,7 +21,9 @@
     "typescript": "3.9.7"
   },
   "dependencies": {
+    "@gql2ts/from-schema": "^2.0.0-4",
     "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
     "graphql": "^15.3.0",
     "graphql-import": "^1.0.2",
     "graphql-request": "^3.0.0",
@@ -37,7 +40,7 @@
   "scripts": {
     "start": "NODE_ENV=development nodemon --exec ts-node src/index.ts",
     "test": "NODE_ENV=test jest --forceExit",
-    "gen-schema-types": "gql2ts src/schema.graphql -o src/types/schema.d.ts"
+    "gen-schema-types": "ts-node src/scripts/createTypes.ts"
   },
   "jest": {
     "globalSetup": "./src/testSetup/callSetup.js",
