--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
     "@types/node-fetch": "^2.5.7",
+    "@types/sparkpost": "^2.1.4",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.5",
     "gql2ts": "^1.10.1",
@@ -34,6 +35,7 @@
     "node-fetch": "^2.6.0",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
+    "sparkpost": "^2.1.4",
     "typeorm": "0.2.25",
     "uuid": "^8.3.0",
     "yup": "^0.29.3"
