--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Awesome project developed with TypeORM.",
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/connect-redis": "^0.0.14",
     "@types/express": "^4.17.7",
+    "@types/express-session": "^1.17.0",
     "@types/ioredis": "^4.17.3",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
@@ -24,8 +26,10 @@
   "dependencies": {
     "@gql2ts/from-schema": "^2.0.0-4",
     "bcryptjs": "^2.4.3",
+    "connect-redis": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "graphql-import": "^1.0.2",
     "graphql-request": "^3.0.0",
