--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@gql2ts/from-schema": "^2.0.0-4",
+    "axios": "^0.20.0",
     "bcryptjs": "^2.4.3",
     "connect-redis": "^5.0.0",
     "dotenv": "^8.2.0",
