--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
     "@types/node-fetch": "^2.5.7",
+    "@types/request-promise": "^4.1.46",
     "@types/sparkpost": "^2.1.4",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.5",
@@ -40,6 +41,7 @@
     "node-fetch": "^2.6.0",
     "pg": "^8.3.0",
     "reflect-metadata": "^0.1.13",
+    "request-promise": "^4.2.6",
     "sparkpost": "^2.1.4",
     "typeorm": "0.2.25",
     "uuid": "^8.3.0",
