--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/connect-redis": "^0.0.14",
     "@types/express": "^4.17.7",
+    "@types/express-rate-limit": "^5.1.0",
     "@types/express-session": "^1.17.0",
     "@types/ioredis": "^4.17.3",
     "@types/jest": "^26.0.9",
@@ -31,6 +32,7 @@
     "connect-redis": "^5.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "graphql": "^15.3.0",
     "graphql-import": "^1.0.2",
@@ -40,6 +42,7 @@
     "ioredis": "^4.17.3",
     "node-fetch": "^2.6.0",
     "pg": "^8.3.0",
+    "rate-limit-redis": "^2.0.0",
     "reflect-metadata": "^0.1.13",
     "request-promise": "^4.2.6",
     "sparkpost": "^2.1.4",
