--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/express": "^4.17.7",
     "@types/express-rate-limit": "^5.1.0",
     "@types/express-session": "^1.17.0",
+    "@types/faker": "^4.1.12",
     "@types/ioredis": "^4.17.3",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
@@ -34,6 +35,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
+    "faker": "^5.1.0",
     "graphql": "^15.3.0",
     "graphql-import": "^1.0.2",
     "graphql-request": "^3.0.0",
