adding in the base url and paths flag for the rate limiter function

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,10 @@
     "sourceMap": true,
     "outDir": "./dist",
     "moduleResolution": "node",
+    "baseUrl": ".",
+    "paths": {
+      "*": ["*", "src/types/*"]
+    },
 
     "removeComments": true,
     "noImplicitAny": true,
