--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@types/express-rate-limit": "^5.1.0",
     "@types/express-session": "^1.17.0",
     "@types/faker": "^4.1.12",
+    "@types/glob": "^7.1.3",
     "@types/ioredis": "^4.17.3",
     "@types/jest": "^26.0.9",
     "@types/node": "^14.0.27",
@@ -36,6 +37,7 @@
     "express-rate-limit": "^5.1.3",
     "express-session": "^1.17.1",
     "faker": "^5.1.0",
+    "glob": "^7.1.6",
     "graphql": "^15.3.0",
     "graphql-import": "^1.0.2",
     "graphql-request": "^3.0.0",
