--- a/package.json
+++ b/package.json
@@ -41,9 +41,10 @@
     "graphql": "^15.3.0",
     "graphql-import": "^1.0.2",
     "graphql-request": "^3.0.0",
-    "graphql-tools": "^6.0.18",
+    "graphql-tools": "^6.2.0",
     "graphql-yoga": "^1.18.3",
     "ioredis": "^4.17.3",
+    "merge-graphql-schemas": "^1.7.8",
     "node-fetch": "^2.6.0",
     "pg": "^8.3.0",
     "rate-limit-redis": "^2.0.0",
